--- a/.github/workflows/pr-rate-limiter.yaml
+++ b/.github/workflows/pr-rate-limiter.yaml
@@ -1,24 +1,24 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 
-name: PR rate limiter
+name: 'PR rate limiter'
 
 permissions: {}
 
 on:
   pull_request_target:
     types:
-      - opened
-      - reopened
+      - 'opened'
+      - 'reopened'
 
 jobs:
   limit:
     runs-on: 'gemini-cli-ubuntu-16-core'
     permissions:
-      contents: read
-      pull-requests: write
+      contents: 'read'
+      pull-requests: 'write'
     steps:
-      - name: Limit open pull requests per user
-        uses: Homebrew/actions/limit-pull-requests@9ceb7934560eb61d131dde205a6c2d77b2e1529d # master
+      - name: 'Limit open pull requests per user'
+        uses: 'Homebrew/actions/limit-pull-requests@9ceb7934560eb61d131dde205a6c2d77b2e1529d' # master
         with:
           except-author-associations: |
             MEMBER
