fix(core): remove deprecated install deps from cli path

--- a/package.json
+++ b/package.json
@@ -141,7 +141,7 @@
     "@lydell/node-pty-linux-x64": "1.1.0",
     "@lydell/node-pty-win32-arm64": "1.1.0",
     "@lydell/node-pty-win32-x64": "1.1.0",
-    "keytar": "^7.9.0",
+    "keytar": "npm:@github/keytar@^7.10.6",
     "node-pty": "^1.0.0"
   },
   "lint-staged": {
