feat(policy): enable MCP tool annotation matching in policies
Wire MCP tool annotations (readOnlyHint, destructiveHint, etc.) through
both policy check paths so declarative TOML rules can match on
toolAnnotations. This removes the hardcoded per-tool rule injection in
mcp-client.ts in favor of a generic annotation-based rule in plan.toml.

Key changes:
- Store full annotations on DiscoveredMCPTool and expose via getter
- Pass toolAnnotations through scheduler, message-bus, and
  coreToolScheduler policy check calls
- Add toolAnnotations field to ToolConfirmationRequest
- Update getExcludedTools() to accept tool metadata for annotation rules
- Add annotation-based ASK_USER rule for read-only MCP tools in plan.toml
- Sync docs with toolAnnotations support

Fixes #19654

--- a/packages/core/src/policy/policies/plan.toml
+++ b/packages/core/src/policy/policies/plan.toml
@@ -37,6 +37,13 @@ deny_message = "You are in Plan Mode with access to read-only tools. Execution o
 # Explicitly Allow Read-Only Tools in Plan mode.
 
 [[rule]]
+mcpName = "*"
+toolAnnotations = { readOnlyHint = true }
+decision = "ask_user"
+priority = 70
+modes = ["plan"]
+
+[[rule]]
 toolName = ["glob", "grep_search", "list_directory", "read_file", "google_web_search", "activate_skill"]
 decision = "allow"
 priority = 70
