feat(policy): centralize plan mode tool visibility in policy engine
Make the policy engine (via plan.toml) the single source of truth for
plan mode tool filtering, replacing three hardcoded locations:
PLAN_MODE_TOOLS constant, ToolRegistry.isActiveTool() inline allowlist,
and PromptProvider's parallel filter.

- Add optional `allToolNames` param to PolicyEngine.getExcludedTools()
  to handle global catch-all DENY rules against all registered tools
- Forward `allToolNames` through Config.getExcludeTools()
- Remove hardcoded plan mode block from ToolRegistry.isActiveTool()
- Make PromptProvider derive plan mode tool list from getAllTools()
- Add write constraint as explicit Rule 2 in plan mode prompt
- Delete PLAN_MODE_TOOLS constant from tool-names.ts
- Fix plan.toml bug: "edit" → "replace" in priority 65 DENY rule
- Include _serverName in tool metadata so policy engine can resolve
  composite wildcard patterns against unqualified MCP tool names
- Add plan mode category to /policies list command

Fixes: #20076
Fixes: #20176

Co-authored-by: Mahima Shanware <mshanware@google.com>

--- a/packages/core/src/policy/policies/plan.toml
+++ b/packages/core/src/policy/policies/plan.toml
@@ -65,7 +65,7 @@ argsPattern = "\"file_path\":\"[^\"]+[\\\\/]+\\.gemini[\\\\/]+tmp[\\\\/]+[\\w-]+
 
 # Explicitly Deny other write operations in Plan mode with a clear message.
 [[rule]]
-toolName = ["write_file", "edit"]
+toolName = ["write_file", "replace"]
 decision = "deny"
 priority = 65
 modes = ["plan"]
