Fixes based on reviews.

--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -67,7 +67,7 @@ jobs:
           fi
 
       - name: 'Generate Changelog with Gemini'
-        if: steps.validate_version.outputs.CONTINUE == 'true'
+        if: 'steps.validate_version.outputs.CONTINUE == ''true'''
         uses: 'google-github-actions/run-gemini-cli@a3bf79042542528e91937b3a3a6fbc4967ee3c31' # ratchet:google-github-actions/run-gemini-cli@v0
         with:
           gemini_api_key: '${{ secrets.GEMINI_API_KEY }}'
@@ -84,7 +84,7 @@ jobs:
             When you are done, please output your thought process and the steps you took for future debugging purposes.
 
       - name: 'Create Pull Request'
-        if: steps.validate_version.outputs.CONTINUE == 'true'
+        if: 'steps.validate_version.outputs.CONTINUE == ''true'''
         uses: 'peter-evans/create-pull-request@v6'
         with:
           token: '${{ secrets.GEMINI_CLI_ROBOT_GITHUB_PAT }}'
