fix(core): allow /memory add to work in plan mode
Add save_memory to the plan mode TOML allow-list instead of bypassing
the policy engine for client-initiated requests. This preserves all
security invariants while unblocking the slash command.

Fixes: https://github.com/google-gemini/gemini-cli/issues/20347

--- a/packages/core/src/policy/policies/plan.toml
+++ b/packages/core/src/policy/policies/plan.toml
@@ -50,7 +50,7 @@ priority = 70
 modes = ["plan"]
 
 [[rule]]
-toolName = ["ask_user", "exit_plan_mode"]
+toolName = ["ask_user", "exit_plan_mode", "save_memory"]
 decision = "ask_user"
 priority = 70
 modes = ["plan"]
