--- a/.github/actions/push-sandbox/action.yml
+++ b/.github/actions/push-sandbox/action.yml
@@ -72,7 +72,7 @@ runs:
       env:
         GEMINI_SANDBOX_IMAGE_TAG: '${{ steps.image_tag.outputs.FINAL_TAG }}'
         GEMINI_SANDBOX: 'docker'
-        BUILD_SANDBOX_FLAGS: "--platform linux/amd64,linux/arm64${{ inputs.dry-run != 'true' && ' --push' || '' }}"
+        BUILD_SANDBOX_FLAGS: "${{ inputs.dry-run != 'true' && '--platform linux/amd64,linux/arm64 --push' || '--platform linux/amd64 --load' }}"
       run: |-
         npm run build:sandbox -- \
           --image google/gemini-cli-sandbox:${{ steps.image_tag.outputs.FINAL_TAG }} \
