--- a/.github/workflows/label-workstream-rollup.yml
+++ b/.github/workflows/label-workstream-rollup.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   labeler:
-    if: github.repository == 'google-gemini/gemini-cli'
+    if: "github.repository == 'google-gemini/gemini-cli'"
     runs-on: 'ubuntu-latest'
     permissions:
       issues: 'write'
