--- a/.github/workflows/docs-rebuild.yml
+++ b/.github/workflows/docs-rebuild.yml
@@ -7,7 +7,7 @@ on:
       - 'docs/**'
 jobs:
   trigger-rebuild:
-    if: github.repository == 'google-gemini/gemini-cli'
+    if: "github.repository == 'google-gemini/gemini-cli'"
     runs-on: 'ubuntu-latest'
     steps:
       - name: 'Trigger rebuild'
