--- a/.github/workflows/gemini-automated-issue-triage.yml
+++ b/.github/workflows/gemini-automated-issue-triage.yml
@@ -129,7 +129,7 @@ jobs:
             return labelNames;
 
       - name: 'Run Gemini Issue Analysis'
-        uses: 'google-github-actions/run-gemini-cli@a3bf79042542528e91937b3a3a6fbc4967ee3c31' # ratchet:google-github-actions/run-gemini-cli@v0
+        uses: 'google-github-actions/run-gemini-cli@v0'
         id: 'gemini_issue_analysis'
         env:
           GITHUB_TOKEN: '' # Do not pass any auth token here since this runs on untrusted inputs
@@ -147,6 +147,7 @@ jobs:
           gcp_location: '${{ vars.GOOGLE_CLOUD_LOCATION }}'
           gcp_service_account: '${{ vars.SERVICE_ACCOUNT_EMAIL }}'
           gemini_api_key: '${{ secrets.GEMINI_API_KEY }}'
+          gemini_model: 'gemini-3-flash-preview'
           use_vertex_ai: '${{ vars.GOOGLE_GENAI_USE_VERTEXAI }}'
           use_gemini_code_assist: '${{ vars.GOOGLE_GENAI_USE_GCA }}'
           settings: |-
@@ -160,103 +161,7 @@ jobs:
                 "run_shell_command(echo)"
               ]
             }
-          prompt: |-
-            ## Role
-
-            You are an issue triage assistant. Your role is to analyze a GitHub issue and determine the single most appropriate area/ label based on the definitions provided.
-
-            ## Steps
-            1. Review the issue title and body: ${{ env.ISSUE_TITLE }} and ${{ env.ISSUE_BODY }}.
-            2. Review the available labels: ${{ env.AVAILABLE_LABELS }}.
-            3. Select exactly one area/ label that best matches the issue based on Reference 1: Area Definitions.
-            4. Fallback Logic:
-                - If you cannot confidently determine the correct area/ label from the definitions, you must use area/unknown.
-            5. Output your selected label in JSON format and nothing else. Example:
-                {"labels_to_set": ["area/core"]}
-
-            ## Guidelines
-            - Your output must contain exactly one area/ label.
-            - Triage only the current issue based on its title and body.
-            - Output only valid JSON format.
-            - Do not include any explanation or additional text, just the JSON.
-
-            Reference 1: Area Definitions
-            area/agent
-            - Description: Issues related to the "brain" of the CLI. This includes the core agent logic, model quality, tool/function calling, and memory.
-            - Example Issues:
-              "I am not getting a reasonable or expected response."
-              "The model is not calling the tool I expected."
-              "The web search tool is not working as expected."
-              "Feature request for a new built-in tool (e.g., read file, write file)."
-              "The generated code is poor quality or incorrect."
-              "The model seems stuck in a loop."
-              "The response from the model is malformed (e.g., broken JSON, bad formatting)."
-              "Concerns about unnecessary token consumption."
-              "Issues with how memory or chat history is managed."
-              "Issues with sub-agents."
-              "Model is switching from one to another unexpectedly."
-
-            area/enterprise
-            - Description: Issues specific to enterprise-level features, including telemetry, policy, and licenses.
-            - Example Issues:
-              "Usage data is not appearing in our telemetry dashboard."
-              "A user is able to perform an action that should be blocked by an admin policy."
-              "Questions about billing, licensing tiers, or enterprise quotas."
-
-            area/non-interactive
-            - Description: Issues related to using the CLI in automated or non-interactive environments (headless mode).
-            - Example Issues:
-              "Problems using the CLI as an SDK in another surface."
-              "The CLI is behaving differently when run from a shell script vs. an interactive terminal."
-              "GitHub action is failing."
-              "I am having trouble running the CLI in headless mode"
-
-            area/core
-            - Description: Issues with the fundamental CLI app itself. This includes the user interface (UI/UX), installation, OS compatibility, and performance.
-            - Example Issues:
-              "I am seeing my screen flicker when using the CLI."
-              "The output in my terminal is malformed or unreadable."
-              "Theme changes are not taking effect."
-              "Keyboard inputs (e.g., arrow keys, Ctrl+C) are not being recognized."
-              "The CLI failed to install or update."
-              "An issue specific to running on Windows, macOS, or Linux."
-              "Problems with command parsing, flags, or argument handling."
-              "High CPU or memory usage by the CLI process."
-              "Issues related to multi-modality (e.g., handling image inputs)."
-              "Problems with the IDE integration connection or installation"
-
-            area/security
-            - Description: Issues related to user authentication, authorization, data security, and privacy.
-            - Example Issues:
-              "I am unable to sign in."
-              "The login flow is selecting the wrong authentication path"
-              "Problems with API key handling or credential storage."
-              "A report of a security vulnerability"
-              "Concerns about data sanitization or potential data leaks."
-              "Issues or requests related to privacy controls."
-              "Preventing unauthorized data access."
-
-            area/platform
-            - Description: Issues related to CI/CD, release management, testing, eval infrastructure, capacity, quota management, and sandbox environments.
-            - Example Issues:
-              "I am getting a 429 'Resource Exhausted' or 500-level server error."
-              "General slowness or high latency from the service."
-              "The build script is broken on the main branch."
-              "Tests are failing in the CI/CD pipeline."
-              "Issues with the release management or publishing process."
-              "User is running out of capacity."
-              "Problems specific to the sandbox or staging environments."
-              "Questions about quota limits or requests for increases."
-
-            area/extensions
-            - Description: Issues related to the extension ecosystem, including the marketplace and website.
-            - Example Issues:
-              "Bugs related to the extension marketplace website."
-              "Issues with a specific extension."
-              "Feature request for the extension ecosystem."
-
-            area/unknown
-            - Description: Issues that do not clearly fit into any other defined area/ category, or where information is too limited to make a determination. Use this when no other area is appropriate.
+          prompt: '/gemini-triage'
 
       - name: 'Apply Labels to Issue'
         if: |-
@@ -271,45 +176,35 @@ jobs:
           script: |
             const rawOutput = process.env.LABELS_OUTPUT;
             core.info(`Raw output from model: ${rawOutput}`);
-            let parsedLabels;
+            
+            let parsed;
             try {
-              // First, try to parse the raw output as JSON.
-              parsedLabels = JSON.parse(rawOutput);
-            } catch (jsonError) {
-              // If that fails, check for a markdown code block.
-              core.warning(`Direct JSON parsing failed: ${jsonError.message}. Trying to extract from a markdown block.`);
-              const jsonMatch = rawOutput.match(/```json\s*([\s\S]*?)\s*```/);
-              if (jsonMatch && jsonMatch[1]) {
-                try {
-                  parsedLabels = JSON.parse(jsonMatch[1].trim());
-                } catch (markdownError) {
-                  core.setFailed(`Failed to parse JSON even after extracting from markdown block: ${markdownError.message}\nRaw output: ${rawOutput}`);
-                  return;
-                }
-              } else {
-                // If no markdown block, try to find a raw JSON object in the output.
-                // The CLI may include debug/log lines (e.g. telemetry init, YOLO mode)
-                // before the actual JSON response.
-                const jsonObjectMatch = rawOutput.match(/(\{[\s\S]*"labels_to_set"[\s\S]*\})/);
-                if (jsonObjectMatch) {
-                  try {
-                    parsedLabels = JSON.parse(jsonObjectMatch[0]);
-                  } catch (extractError) {
-                    core.setFailed(`Found JSON-like content but failed to parse: ${extractError.message}\nRaw output: ${rawOutput}`);
-                    return;
-                  }
-                } else {
-                  core.setFailed(`Output is not valid JSON and does not contain extractable JSON.\nRaw output: ${rawOutput}`);
-                  return;
+              // 1. Try extracting from markdown block first (safest)
+              const jsonMatch = rawOutput.match(/```json\s*([\s\S]*?)\s*```/) || rawOutput.match(/```\s*([\s\S]*?)\s*```/);
+              const jsonString = jsonMatch ? jsonMatch[1].trim() : rawOutput.trim();
+              
+              // 2. If no block, try parsing the whole thing (maybe it is pure JSON)
+              // 3. If that fails, try to find the first '{' and last '}'
+              let toParse = jsonString;
+              if (!jsonMatch) {
+                const start = rawOutput.indexOf('{');
+                const end = rawOutput.lastIndexOf('}');
+                if (start !== -1 && end !== -1 && end > start) {
+                  toParse = rawOutput.substring(start, end + 1);
                 }
               }
+              
+              parsed = JSON.parse(toParse);
+            } catch (err) {
+              core.setFailed(`Failed to parse triage result. Error: ${err.message}\nRaw output: ${rawOutput}`);
+              return;
             }
 
             const issueNumber = parseInt(process.env.ISSUE_NUMBER);
-            const labelsToAdd = parsedLabels.labels_to_set || [];
+            const labelsToAdd = parsed.labels_to_set || [];
 
-            if (labelsToAdd.length !== 1) {
-              core.setFailed(`Expected exactly 1 label (area/), but got ${labelsToAdd.length}. Labels: ${labelsToAdd.join(', ')}`);
+            if (labelsToAdd.length === 0) {
+              core.info(`No labels determined for #${issueNumber}.`);
               return;
             }
 
