--- a/.github/workflows/chained_e2e.yml
+++ b/.github/workflows/chained_e2e.yml
@@ -53,7 +53,7 @@ jobs:
           REPO_NAME: '${{ github.event.inputs.repo_name }}'
         run: |
           mkdir -p ./pr
-          echo '${{ env.REPO_NAME }}' > ./pr/repo_name
+          echo '${REPO_NAME}' > ./pr/repo_name
       - uses: 'actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02' # ratchet:actions/upload-artifact@v4
         with:
           name: 'repo_name'
@@ -320,14 +320,19 @@ jobs:
     steps:
       - name: 'Check E2E test results'
         run: |
-          if [[ ${{ needs.e2e_linux.result }} != 'success' || \
-               ${{ needs.e2e_mac.result }} != 'success' || \
-               ${{ needs.e2e_windows.result }} != 'success' || \
-               ${{ needs.evals.result }} != 'success' ]]; then
+          if [[ ${NEEDS_E2E_LINUX_RESULT} != 'success' || \
+               ${NEEDS_E2E_MAC_RESULT} != 'success' || \
+               ${NEEDS_E2E_WINDOWS_RESULT} != 'success' || \
+               ${NEEDS_EVALS_RESULT} != 'success' ]]; then
             echo "One or more E2E jobs failed."
             exit 1
           fi
           echo "All required E2E jobs passed!"
+        env:
+          NEEDS_E2E_LINUX_RESULT: ${{ needs.e2e_linux.result }}
+          NEEDS_E2E_MAC_RESULT: ${{ needs.e2e_mac.result }}
+          NEEDS_E2E_WINDOWS_RESULT: ${{ needs.e2e_windows.result }}
+          NEEDS_EVALS_RESULT: ${{ needs.evals.result }}
 
   set_workflow_status:
     runs-on: 'gemini-cli-ubuntu-16-core'
