--- a/.github/workflows/evals-nightly.yml
+++ b/.github/workflows/evals-nightly.yml
@@ -62,7 +62,7 @@ jobs:
           TEST_NAME_PATTERN: '${{ github.event.inputs.test_name_pattern }}'
         run: |
           CMD="npm run test:all_evals"
-          PATTERN="${{ env.TEST_NAME_PATTERN }}"
+          PATTERN="${TEST_NAME_PATTERN}"
 
           if [[ -n "$PATTERN" ]]; then
             if [[ "$PATTERN" == *.ts || "$PATTERN" == *.js || "$PATTERN" == */* ]]; then
