--- a/.github/workflows/deflake.yml
+++ b/.github/workflows/deflake.yml
@@ -4,9 +4,8 @@ on:
   workflow_dispatch:
     inputs:
       branch_ref:
-        description: 'Branch to run on'
-        required: true
-        default: 'main'
+        description: 'Branch to run on (defaults to selected branch)'
+        required: false
         type: 'string'
       test_name_pattern:
         description: 'The test name pattern to use'
@@ -40,7 +39,7 @@ jobs:
       - name: 'Checkout'
         uses: 'actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955' # ratchet:actions/checkout@v5
         with:
-          ref: '${{ github.event.inputs.branch_ref }}'
+          ref: '${{ github.event.inputs.branch_ref || github.ref }}'
           repository: '${{ github.repository }}'
 
       - name: 'Set up Node.js ${{ matrix.node-version }}'
@@ -81,7 +80,7 @@ jobs:
       - name: 'Checkout'
         uses: 'actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955' # ratchet:actions/checkout@v5
         with:
-          ref: '${{ github.event.inputs.branch_ref }}'
+          ref: '${{ github.event.inputs.branch_ref || github.ref }}'
           repository: '${{ github.repository }}'
 
       - name: 'Set up Node.js 20.x'
@@ -119,7 +118,7 @@ jobs:
       - name: 'Checkout'
         uses: 'actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955' # ratchet:actions/checkout@v5
         with:
-          ref: '${{ github.event.inputs.branch_ref }}'
+          ref: '${{ github.event.inputs.branch_ref || github.ref }}'
           repository: '${{ github.repository }}'
 
       - name: 'Set up Node.js 20.x'
