chore: update agent tools and schemas

--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "LICENSE"
   ],
   "devDependencies": {
-    "@agentclientprotocol/sdk": "^0.12.0",
+    "@agentclientprotocol/sdk": "file:../acp-sdk",
     "@octokit/rest": "^22.0.0",
     "@types/marked": "^5.0.2",
     "@types/mime-types": "^3.0.1",
